Refactoring, hook reacting to manager changes

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/addon-essentials": "^6.1.14",
     "@storybook/react": "^6.1.14",
     "@types/d3": "^6.2.0",
+    "@types/deep-equal": "^1.0.1",
     "@types/geojson": "^7946.0.7",
     "@types/leaflet": "^1.5.19",
     "@types/leaflet.markercluster": "^1.4.4",
@@ -72,6 +73,7 @@
     "d3-geo-projection": "^2.7.1",
     "d3-queue": "^3.0.7",
     "d3-scale": "^3.2.1",
+    "deep-equal": "^2.0.5",
     "leaflet": "^1.7.1",
     "leaflet-sidebar-v2": "3.2.2",
     "leaflet.markercluster": "^1.4.1",
