--- a/react-geovisto/package.json
+++ b/react-geovisto/package.json
@@ -25,24 +25,35 @@
     "@storybook/manager-webpack5": "^6.4.20",
     "@storybook/node-logger": "^6.4.20",
     "@storybook/preset-create-react-app": "^4.1.0",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "0.0.9",
     "@types/deep-equal": "^1.0.1",
+    "@types/react": "^18.0.5",
+    "@types/react-native": "^0.67.4",
     "css-loader": "^6.7.1",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.7.1",
     "leaflet-sidebar-v2": "^3.2.3",
-    "node-sass": "^7.0.1",
+    "postcss-copy": "^7.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "rollup": "^2.36.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "sass": "^1.50.1",
     "sass-loader": "^12.6.0",
+    "storybook-addon-sass-postcss": "^0.1.0",
+    "storybook-css-modules-preset": "^1.1.1",
+    "style-loader": "^2.0.0",
     "typescript": "^4.6.3",
     "webpack": "^5.71.0"
   },
   "dependencies": {
     "@types/node": "^16.11.26",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/react-dom": "^17.0.0",
     "deep-equal": "^2.0.5",
     "geovisto": "^1.0.0",
     "geovisto-filters": "^1.0.2",
