--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "react-geovisto",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.1.1",
     "deep-equal": "^2.0.5",
     "font-awesome": "^4.7.0",
     "geovisto": "^1.0.0",
@@ -19,16 +17,16 @@
     "geovisto-themes": "^1.0.1",
     "leaflet": "^1.7.1",
     "leaflet-sidebar-v2": "^3.2.3",
-    "node-sass": "^5.0.0",
-    "postcss-copy": "^7.1.0",
     "react-refresh": "^0.12.0",
     "react-scripts": "^5.0.0",
     "request": "^2.88.2",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@storybook/addon-actions": "^6.4.20",
     "@storybook/addon-essentials": "^6.4.20",
     "@storybook/addon-interactions": "^6.4.20",
@@ -41,20 +39,29 @@
     "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "0.0.9",
     "@types/deep-equal": "^1.0.1",
+    "@types/leaflet": "^1.7.9",
     "@types/react": "^18.0.5",
     "@types/react-native": "^0.67.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sass": "^1.51.0",
+    "sass-loader": "^10.2.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   },
   "scripts": {
     "clean": "rimraf dist",
     "storybook": "start-storybook -p 6007",
     "storybook:build": "build-storybook",
-    "build": "rollup -c",
-    "build:watch": "rollup -c -w",
+    "build": "webpack",
     "start": "npm run storybook"
   },
   "repository": {
