--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.13.1",
     "sass": "^1.51.0",
     "sass-loader": "^10.2.1",
+    "storybook-dark-mode": "^1.1.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
