Rollup config and deps added

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,5 @@
 {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react",
-      "@babel/preset-typescript"
-    ]
+  "presets": ["@babel/env", "@babel/preset-react", "@babel/preset-typescript"],
+  "plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-transform-react-jsx" ],
+  "exclude": "**/*.{spec,test,stories}.{js,jsx,tsx,ts}"
 }
