--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@storybook/addon-actions": "^6.4.20",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.4.20",
-    "@storybook/addon-links": "^6.4.20",
-    "@storybook/builder-webpack5": "^6.4.20",
-    "@storybook/manager-webpack5": "^6.4.20",
-    "@storybook/node-logger": "^6.4.20",
-    "@storybook/preset-create-react-app": "^4.1.0",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@storybook/addon-actions": "^6.5.8",
+    "@storybook/addon-essentials": "^6.5.8",
+    "@storybook/addon-interactions": "^6.5.8",
+    "@storybook/addon-links": "^6.5.8",
+    "@storybook/builder-webpack5": "^6.5.8",
+    "@storybook/manager-webpack5": "^6.5.8",
+    "@storybook/node-logger": "^6.5.8",
+    "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.4.20",
-    "@storybook/testing-library": "0.0.9",
+    "@storybook/react": "^6.5.8",
+    "@storybook/testing-library": "0.0.12",
     "@types/deep-equal": "^1.0.1",
     "@types/leaflet": "^1.7.9",
     "@types/leaflet.markercluster": "^1.4.6",
@@ -41,27 +45,35 @@
     "@types/react-native": "^0.67.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
     "font-awesome": "^4.7.0",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.14",
+    "postcss-copy": "^7.1.0",
     "postcss-loader": "^6.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "rollup": "^2.75.6",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.32.1",
     "sass": "^1.51.0",
     "sass-loader": "^10.2.1",
     "storybook-dark-mode": "^1.1.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
-    "webpack": "^5.72.0",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
     "clean": "rimraf dist",
     "storybook": "start-storybook -p 6007",
     "storybook:build": "build-storybook",
-    "build": "webpack",
+    "build": "rollup -c",
+    "build:watch": "rollup -c -w",
+    "build-webpack": "webpack",
     "start": "npm run storybook"
   },
   "repository": {
