--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "react-geovisto",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "style": "dist/index.css",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "deep-equal": "^2.0.5",
     "geovisto": "^2.0.0",
@@ -66,6 +69,10 @@
     "typescript": "^4.6.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "clean": "rimraf dist",
