--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "react-geovisto",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "style": "dist/index.css",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "deep-equal": "^2.0.5",
     "geovisto": "^2.0.0",
@@ -23,6 +26,10 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
     "@storybook/addon-actions": "^6.4.20",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.20",
@@ -41,6 +48,7 @@
     "@types/react-native": "^0.67.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "autoprefixer": "^10.2.1",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
@@ -49,19 +57,29 @@
     "postcss-loader": "^6.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "rollup": "^2.36.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.29.0",
     "sass": "^1.51.0",
     "sass-loader": "^10.2.1",
     "storybook-dark-mode": "^1.1.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
-    "webpack": "^5.72.0",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "clean": "rimraf dist",
     "storybook": "start-storybook -p 6007",
     "storybook:build": "build-storybook",
-    "build": "webpack",
+    "build": "rollup -c",
+    "build:watch": "rollup -c -w",
+    "build-webpack": "webpack",
     "start": "npm run storybook"
   },
   "repository": {
