--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
     "font-awesome": "^4.7.0",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.14",
+    "postcss-copy": "^7.1.0",
     "postcss-loader": "^6.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
