--- a/package.json
+++ b/package.json
@@ -1,10 +1,33 @@
 {
   "name": "react-geovisto",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "style": "dist/index.css",
   "types": "dist/index.d.ts",
+  "homepage": "https://github.com/geovisto/react-geovisto#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/geovisto/react-geovisto.git"
+  },
+  "keywords": [
+    "react",
+    "geovisto"
+  ],
+  "scripts": {
+    "clean": "rimraf dist",
+    "storybook": "start-storybook -p 6007",
+    "storybook:build": "build-storybook",
+    "build": "rollup -c",
+    "build:watch": "rollup -c -w",
+    "build-webpack": "webpack",
+    "start": "npm run storybook"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "dependencies": {
     "deep-equal": "^2.0.5",
     "geovisto": "^2.0.0",
@@ -69,29 +92,5 @@
     "typescript": "^4.6.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
-  },
-  "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "scripts": {
-    "clean": "rimraf dist",
-    "storybook": "start-storybook -p 6007",
-    "storybook:build": "build-storybook",
-    "build": "rollup -c",
-    "build:watch": "rollup -c -w",
-    "build-webpack": "webpack",
-    "start": "npm run storybook"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/geovisto/react-geovisto.git"
-  },
-  "keywords": [
-    "react",
-    "geovisto"
-  ],
-  "author": "Martin Chládek",
-  "license": "MIT",
-  "homepage": "https://github.com/geovisto/react-geovisto#readme"
+  }
 }
